<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3423F"
    tools:context=".ui.activity.RegistrationActivity">


    <FrameLayout
        android:id="@+id/flProfilePictureFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
     >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:civ_border_width="2dp"
            app:civ_border_color="#FFFFFF"
            app:civ_border_overlay="true"
            android:src="@drawable/baseline_person_24"
          />

        <ImageView
            android:id="@+id/ivEditIcon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_30sdp"
            android:contentDescription="@string/add_profile_picture"
            android:layout_gravity="bottom|center"

            android:src="@drawable/icon_edit"
            />

    </FrameLayout>
    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.66"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.06" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.94160587" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="32dp" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etUsernameContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
                app:helperTextTextColor="@color/design_default_color_error"
                >

                <EditText
                    android:id="@+id/etUsername"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/etUsernameContainer"
                app:helperTextTextColor="@color/design_default_color_error"
                >

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/etEmailContainer"
                app:helperTextTextColor="@color/design_default_color_error"
                >

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                     />

                />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etConfirmPasswordContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:helperTextTextColor="@color/design_default_color_error"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordContainer"
                >

                <EditText
                    android:id="@+id/etConfirmPassword"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:backgroundTint="#FF4340"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/sign_up"
                android:textColorHighlight="#F66D6B"
                android:textColorLink="#FF4340"
                app:cornerRadius="11dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPasswordContainer" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top" />

            <TextView
                android:id="@+id/tvAlreadyHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/already_have_an_account"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/tvSignInBottom"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btSignUp" />

            <TextView
                android:id="@+id/tvSignInBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/sign_in"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvAlreadyHaveAccount"
                app:layout_constraintTop_toBottomOf="@+id/btSignUp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>