<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3423F"
    tools:context=".ui.activity.RegistrationActivity">



    <!--<TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="Yahya"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="@dimen/_35sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <FrameLayout
        android:id="@+id/flProfilePictureFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProductImage"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:civ_border_color="@color/white"
            android:elevation="@dimen/_2sdp"
            android:src="@drawable/placeholder_image"
            app:civ_circle_background_color="@color/white"

            />

        <ImageView
            android:id="@+id/ivEditIcon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_30sdp"
            android:elevation="@dimen/_4sdp"
            android:contentDescription="@string/add_profile_picture"
            android:layout_gravity="bottom|center"
            android:src="@drawable/icon_edit"
            app:tint="@color/black" />

    </FrameLayout>
    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.66"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/_28sdp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.06" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.94160587" />



            <TextView
                android:id="@+id/tvAddItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                android:text="@string/add_item_heading"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etProductNameContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/tvAddItem"
                app:helperTextTextColor="@color/design_default_color_error"
                >

                <EditText
                    android:id="@+id/etProductName"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_name"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
<!--
            <Spinner
                android:id="@+id/spinnerItemQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/etProductNameContainer"
                />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spinnerItemQuantity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_8sdp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/etProductNameContainer">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextViewItemQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="Quantity"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPriceContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/spinnerItemQuantity"
                app:helperTextTextColor="@color/design_default_color_error"
                >

                <EditText
                    android:id="@+id/etPrice"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                app:switchPadding="@dimen/_8sdp"
                android:text="@string/discount_switch_add_item"
                app:layout_constraintBottom_toTopOf="@+id/etDiscountPriceContainer"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/etPriceContainer" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etDiscountPriceContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/switchDiscount"
                app:helperTextTextColor="@color/design_default_color_error"
                >

                <EditText
                    android:id="@+id/etDiscountPrice"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Discount"
                    android:inputType="textPassword"
                    />

                />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="28dp"
                android:backgroundTint="#FF4340"
                android:paddingVertical="16dp"
                android:paddingBottom="16dp"
                android:text="Add Item"
                android:textColorHighlight="#F66D6B"
                android:textColorLink="#FF4340"
                app:cornerRadius="11dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/etDiscountPriceContainer" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top" />

            <!--<Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:layout_editor_absoluteX="150dp"
                tools:layout_editor_absoluteY="197dp" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>